--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     *{
       margin: 0;
       padding: 0;
+
+    }
+    body{
+      font-family: Helvetica,Verdana, Arial,sans-serif;
     }
     .container {
       position: absolute;
@@ -44,11 +48,13 @@
     }
 
     .dynamic-head-r h2 {
-      font: 700 16px/23px PingFangSC;
+      font-size: 16px;
+      line-height: 23px;
       color: #333333;
     }
     .dynamic-head-r p {
-      font: 12px/17px PingFangSC;
+      font-size: 12px;
+      line-height: 17px;
       color: #999999;
     }
     .photo {
@@ -58,7 +64,8 @@
     }
     .con-font {
       padding:8px 0 8px 0;
-      font: 15px/21px PingFangSC;
+      font-size: 15px;
+      line-height: 21px;
       color: #444444;
     }
     .photo img {
@@ -102,7 +109,8 @@
     }
     .dy-share span {
       display: inline-block;
-      font: 14px/45px PingFangSC;
+      font-size: 14px;
+      line-height: 45px;
       color: #999999;
     }
     .dy-msg img {
@@ -113,12 +121,14 @@
     }
     .dy-msg span {
       display: inline-block;
-      font: 14px/45px PingFangSC;
+      font-size: 14px;
+      line-height: 45px;
       color: #999999;
     }
-    .dy-zan span {
+    .dy-zan span{
       display: inline-block;
-      font: 14px/45px PingFangSC;
+      font-size: 14px;
+      line-height: 45px;
       color: #999999;
     }
     .dy-zan img {
@@ -132,7 +142,8 @@
       width: 100%;
       height: 161px;
       background: gray;
-      font: 26px/161px PingFangSC;
+      font-size: 26px;
+      line-height: 161px;
     }
     .active-user{
       padding: 12px 15px 0 15px;
@@ -143,11 +154,13 @@
       justify-content: space-between;
     }
     .active-head-l{
-      font: 12px/17px PingFangSC;
+      font-size: 12px;
+      line-height: 17px;
       color: #F5A623;
     }
     .active-head-r{
-      font: 12px/17px PingFangSC;
+      font-size: 12px;
+      line-height: 17px;
       color: #999999;
     }
     .active-con{
@@ -174,10 +187,11 @@
     .box-item .item-name{
       margin-top: 5px;
       color:#999999;
-      font:12px PingFangSC;
+      font-size: 12px;
     }
     .box-item .item-fans{
-      font: 12px/18px PingFangSC;
+      font-size: 12px;
+      line-height: 18px;
       color: #333333;
     }
     .box-item .item-fans .fans-num{
@@ -190,7 +204,8 @@
       display: inline-block;
       text-align: center;
       border-radius: 14px;
-      font: 15px/28px PingFangSC;
+      font-size: 15px;
+      line-height: 28px;
       color: #FFFFFF;
       background: #FF7272;
     }
@@ -201,15 +216,13 @@
       width: 12px;
       height: 10px;
     }
-    .care-help{
-      /*padding: 0 15px;*/
-    }
     .care-head{
       position: relative;
       display: flex;
       justify-content: space-between;
       height: 33px;
-      font:14px/33px PingFangSC;
+      font-size: 14px;
+      line-height: 33px;
       color: #999999;
       padding: 0 15px;
     }
@@ -229,13 +242,14 @@
       margin-right: 10px;
     }
     .care-head-r img{
-      width: 10px;
-      height: 10px;
+      width: 11px;
+      height: 7px;
       margin-top: 11px;
     }
     .con-font .show-msg{
       height: 21px;
-      font: 14px/21px PingFangSC;
+      font-size: 14px;
+      line-height: 21px;
       color: #72BAFE;
     }
     .con-font .show-msg img{
@@ -247,7 +261,8 @@
     .map{
       height: 22px;
       margin:10px 0 15px 0;
-      font: 12px/22px PingFangSC;
+      font-size: 12px;
+      line-height: 22px;
       color: #576B95;
     }
     .map img{
@@ -267,16 +282,19 @@
     }
     .dy-msg2 span{
       display: inline-block;
-      font: 14px/45px PingFangSC;
+      font-size: 14px;
+      line-height: 45px;
       color: #999999;
     }
     .look{
       height: 52px;
       text-align: center;
-      font: 10px/52px PingFangSC;
+      font-size: 12px;
+      line-height: 52px;
       color: #CCCCCC;
     }
   </style>
+  <link rel="stylesheet" href="../../../../Haines/workspace/shop/iworld-shop/res/src/mob/assets/styles/gb.scss">
 </head>
 <body>
 <div class="container">
@@ -372,7 +390,7 @@
     <div class="care-help">
       <div class="care-head">
         <div class="care-head-l"><img src="image/heart2x.png" alt="">关注的求助</div>
-        <div class="care-head-r"><img src="image/down.png" alt=""></div>
+        <div class="care-head-r"><img src="image/down@1x.png" alt=""></div>
       </div>
       <div class="sq-dynamic">
         <div class="dynamic-head">
