--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
     .active-user{
       padding: 12px 15px 0 15px;
       margin-bottom: 8px;
+      position:relative
     }
     .active-head{
       display: flex;
@@ -225,7 +226,6 @@
     .active-con{
       box-sizing: border-box;
       width: 100%;
-      position: relative;
     }
     .box-container{
       box-sizing: border-box;
