--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
     }
     .box-container .change{
       position: absolute;
-      right: 0;
+      right: 26px;
       top: 70px;
       width: 12px;
       height: 10px;
